src/test/ui/issues/70000-79999/issue-72554.stderr
error[E0072]: recursive type `ElemDerived` has infinite size
  --> $DIR/issue-72554.rs:4:1
   |
LL | pub enum ElemDerived {
   | ^^^^^^^^^^^^^^^^^^^^ recursive type has infinite size
LL |     A(ElemDerived)
   |       ----------- recursive without indirection
   |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to make `ElemDerived` representable
   |
LL |     A(Box<ElemDerived>)
   |       ^^^^           ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
